--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     e-book. Vocẽ pode criar suas proprias histórias para outras pessoas ou pra si mesmo divirta-se 
     lendo e fique dentro de todas as noticias mundiaias. Agora e so  salvar suas historias preferidas
     de graça e sincronizar seus dados  para poder atualizar  facilmente e continui a ler. 
-    teste
-
-
+    Este site é gratis e sem anuncios,diversas configuraçoes de leitura modo noturno e diurno, sincronizaçao na nuvem e seus livros seguros,
+    faça dowloads dos seus livros favoritos, tudo pensado em melhorar sua leitura, suporte ativo e pronto para solucionar qualquer duvida 
+    faça marcaçoes nos seus livros , salve suas citaçoes favoritas , e enviar citaçoes para amigos tambem se divertir lendo , mais de
+    50 mil livros
+ 
+    
 </body>
 </html>
