--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     Este site é gratis e sem anuncios,diversas configuraçoes de leitura modo noturno e diurno, sincronizaçao na nuvem e seus livros seguros,
     faça dowloads dos seus livros favoritos, tudo pensado em melhorar sua leitura, suporte ativo e pronto para solucionar qualquer duvida 
     faça marcaçoes nos seus livros , salve suas citaçoes favoritas , e enviar citaçoes para amigos tambem se divertir lendo , mais de
-    50 mil livros
+    50 mil livros gratuitos e voce pode comentar nos comentarios e comentar sua opinião e dar estrelas de 1 a 5, pode tambem
+    fazer varias amizades com gente do mundo todo e temos livros em varios idiomas para voce, tudo isso gratuitamente
+   
  
     
 </body>
