--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biblioteca Online</title>
+    <title>Far Cry 5</title>
 </head>
 <body>
-    Este site serve para vocẽ ler livros a onde quiser e tambem ler ate em off-line, é so abaixar o 
-    e-book. Vocẽ pode criar suas proprias histórias para outras pessoas ou pra si mesmo divirta-se 
-    lendo e fique dentro de todas as noticias mundiaias. Agora e so  salvar suas historias preferidas
-    de graça e sincronizar seus dados  para poder atualizar  facilmente e continui a ler. 
-    Este site é gratis e sem anuncios,diversas configuraçoes de leitura modo noturno e diurno, sincronizaçao na nuvem e seus livros seguros,
-    faça dowloads dos seus livros favoritos, tudo pensado em melhorar sua leitura, suporte ativo e pronto para solucionar qualquer duvida 
-    faça marcaçoes nos seus livros , salve suas citaçoes favoritas , e enviar citaçoes para amigos tambem se divertir lendo , mais de
-    50 mil livros gratuitos e voce pode comentar nos comentarios e comentar sua opinião e dar estrelas de 1 a 5, pode tambem
-    fazer varias amizades com gente do mundo todo e temos livros em varios idiomas para voce, tudo isso gratuitamente
-   
- 
+    Logo Far Cry 5 
     
+    Início
+    
+    Far Cry 5 é um jogo eletrônico de tiro em primeira pessoa de ação-aventura ambientado em um mundo aberto. Foi desenvolvido pela Ubisoft Montreal e publicado pela Ubisoft para Microsoft Windows, PlayStation 4 e Xbox One em 27 de março de 2018 e foi lançado no 3 de Novembro para o Google Stadia, junto com o Far Cry: New Dawn.[3] É o décimo titulo da serie Far Cry e o quinto jogo principal.[4]
+
+Em Far Cry 5 o jogador assume o papel de um delegado de xerife que foi enviado ao condado fictício de Hope County, em Montana, para prender Joseph Seed (chamado de "O Pai" por seus seguidores, os "Edenetes"). Seed é um pregador radical que acredita que foi escolhido por Deus para proteger o povo de Hope County de um "colapso inevitável". Ele é o criador e líder da seita cristã "Projeto do Portão do Éden", um culto apocalíptico religioso e militar.
+
+Far Cry 5 foi bem recebido pela crítica após o seu lançamento, apesar de ter sido objeto de controvérsia depois de ter sido anunciado ao lado de um período de intensos conflitos políticos. Os críticos elogiaram o design do mundo aberto, o seu visual e trilha sonora, mas dirigiram críticas para sua história e alguns dos personagens. O jogo teve um bom desempenho comercial e se tornou o título mais vendido da franquia, arrecadando mais de 310 milhões de dólares em sua primeira semana de vendas. Vários pacotes de conteúdo para download (DLC) foram lançados. Um título de spin-off e continuação da narrativa, Far Cry: New Dawn, foi lançado em fevereiro de 2019.
+
+
 </body>
 </html>
